crates/aura-app/tests/ui/semantic_publication_helpers_private.rs
fn main() {
    let _ =
        aura_app::ui::workflows::semantic_facts::publish_authoritative_operation_phase_with_instance;
}
